<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="cardPrefs"
    android:title="@string/card_settings"
    android:orientation="vertical">

    <PreferenceCategory
        android:title="@string/card_name"
        android:key="NamePref">

             <Preference
                android:id="@+id/logotext"
                android:editable="false"
                android:title="@string/card_name"
                android:dialogTitle="@string/card_name"
                android:summary="@string/card_name"
                android:defaultValue="@string/app_name"
                android:selectAllOnFocus="false"
                android:maxLength="25"
                android:key="loyaltyCardOneNamePref" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/reuse_card">
        <Preference
            android:key="resetPrefs"
            android:title="@string/clear_settings"
            android:enabled="true" />
    </PreferenceCategory>



</PreferenceScreen>
