<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.soboapps.loyaltycard.Locations">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/drawer_logo" />

        <TextView
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storelocation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store1A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store1street"
            android:textSize="15dp"
            android:layout_below="@+id/locations"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:gravity="center"
            android:autoLink = "map"/>
        <TextView
            android:id="@+id/Store1P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store1phone"
            android:textSize="15dp"
            android:layout_below="@+id/store1A"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:autoLink = "phone" />
        <TextView
            android:id="@+id/Store1F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store1fax"
            android:textSize="15dp"
            android:layout_below="@+id/Store1P"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/store1H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store1hours"
            android:textSize="15dp"
            android:layout_below="@+id/Store1F"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/sobo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soboappsurl"
            android:textSize="8dp"
            android:textStyle="bold"
            android:textColorLink="#0502ff"
            android:layout_below="@+id/store1H" />
        <TextView
            android:id="@+id/app_ver"
            android:layout_below="@+id/sobo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="8dp"
            android:textStyle="bold"
            android:paddingTop="3dp" />

    </RelativeLayout>
</ScrollView>