<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.soboapps.loyaltycard.AboutActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sobo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soboappsurl"
            android:textSize="8dp"
            android:textStyle="bold"
            android:textColorLink="#0502ff"
            android:layout_below="@+id/locations" />

        <TextView
            android:id="@+id/app_ver"
            android:layout_below="@+id/sobo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="8dp"
            android:textStyle="bold"
            android:paddingTop="3dp" />

    </RelativeLayout>
</ScrollView>