<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorAccentDark">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.soboapps.sbp.MainActivity"
            android:background="#ffffff">

            <!-- This is the Tag Contents that can be displayed or not by adding the Visibility gone -->
            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tag_viewer_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="#00000000"
                    android:autoLink="email|web"
                    android:text="@string/intro_message"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listDivider"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logo"
                android:orientation="horizontal"
                android:background="@drawable/top_layout_bg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/logo_text"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_weight="1.0"
                    android:paddingLeft="20dp"
                    android:textColor="#ffffff"
                    android:textSize="38sp"

                    android:text="@string/app_title"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/star_1_3"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_star_1"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_2"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_3"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/star_4_6"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/img_star_4"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_5"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_6"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/star_7_9"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/img_star_7"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_8"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/img_star_9"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="8dp"
                android:textStyle="bold"
                android:paddingTop="3dp" />

        </LinearLayout>
    </RelativeLayout>



    <!-- Side navigation drawer UI -->

    <ListView
        android:id="@+id/navList"
        android:src="@drawable/ic_menu_star"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>